54 - Table classes for different type of repeatable question groups.